Fix using UNUSED_PARAM introduced in r82907 https://bugs.webkit.org/show_bug.cgi?id=57940

Reviewed by Darin Adler.

* WebProcess/ResourceCache/WebResourceCacheManager.cpp:
(WebKit::WebResourceCacheManager::clearCacheForOrigin):

Canonical link: https://commits.webkit.org/72834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83054 268f45cc-cd09-0410-ab3c-d52691b4dbfc